kubernetes/apps/atproto-pds/pds-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pds-stateful-set
spec:
  serviceName: pds-service
  replicas: 1
  podManagementPolicy: OrderedReady
  revisionHistoryLimit: 0
  updateStrategy:
    type: OnDelete
  selector:
    matchLabels:
      app.kubernetes.io/name: pds
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pds
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: pds
          image: ghcr.io/bluesky-social/pds:0.4
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: pds-data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10

      volumes:
        - name: pds-data
          persistentVolumeClaim:
            claimName: pds-data
